--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@privy-io/react-auth": "^2.17.3",
     "@vitejs/plugin-react": "^4.6.0",
     "ethers": "^6.15.0",
+    "framer-motion": "^12.23.0",
     "next": "^15.3.5",
     "nodejs": "^0.0.0",
     "privy": "^0.4.1",
